<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/news" />

    <item
        android:id="@+id/placeholder"
        android:title="" />

    <item
        android:id="@+id/navigation_quran"
        android:icon="@drawable/ic_baseline_menu_book_24"
        android:title="@string/al_qur_an" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/akun" />


</menu>