<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SplashScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_kop">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppinsextra"
                android:layout_marginStart="15dp"
                android:layout_marginTop="48dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <ImageView
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_width="77dp"
                android:layout_height="77dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ppi259" />

        </RelativeLayout>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="350dp"
                android:layout_centerHorizontal="true"
                android:layout_height="100dp"
                android:src="@drawable/bismillah"/>

            <TextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:fontFamily="@font/poppinsregular"
                android:text="@string/teks"
                android:textAlignment="center"
                android:textColor="@color/black" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="50dp">

            <Button
                android:layout_centerHorizontal="true"
                android:id="@+id/btn_splscren"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_alignParentBottom="true"
                android:text="@string/let_s_started"
                android:textAllCaps="false" />

        </RelativeLayout>

    </RelativeLayout>
</LinearLayout>